# star-drawing

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  create-release.yml  release.yml
examples/: demo.py
scripts/: hatch_build_hook.py
src/star_drawing/: __init__.py
tests/: test_component.py
typescript/: constants.ts  controller.ts  fonts.ts  geometry.ts  handles.ts  history.ts  index.ts  palette.ts  renderers.ts  selection.ts  svg-import.ts  text-editing.ts  transforms.ts  types.ts
